samples/_failures_safe/1761249063_a83a6b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e42c0a0a.c: In function ‘main’:
./samples/SAFE/__tmp_e42c0a0a.c:198:5: error: expected expression at end of input
  198 |     if (len ==
      |     ^~
./samples/SAFE/__tmp_e42c0a0a.c:198:5: error: expected declaration or statement at end of input
